WBP_MainMenu added Play button functionality
Uses GameInstance

--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,7 +173,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -200,8 +200,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_MainMenu.WBP_MainMenu
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1097,6 +1096,7 @@ WBP_MainMenu_C.Localization=True
 WBP_MainMenu_C.Accessibility=True
 WBP_MainMenu_C.Clipping=True
 WBP_MainMenu_C.Navigation=True
+GI_MainGameInstance_C.Default=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1149,9 +1149,9 @@ HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UserInterface/Menues/WBP_MainMenu
-MRUItem1=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem2=/Game/Blueprints/GameInstance/GI_MainGameInstance
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Blueprints/GameInstance/GI_MainGameInstance
+MRUItem2=/Game/UserInterface/Menues/WBP_MainMenu
 MRUItem3=/Game/Blueprints/BPC_Desk1
 MRUItem4=/Game/Blueprints/Menu/BP_Spawn
 MRUItem5=/Game/UserInterface/PC/WBP_Desktop
@@ -1319,7 +1319,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=-4.000 Y=0.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1341,7 +1341,7 @@ UNR=../../../../../Repos/HotelSimulator/MyProject/Content
 BRUSH=../../../../../Repos/HotelSimulator/MyProject/Content/
 FBX=../../../../../Repos/HotelSimulator/MyProject/Content/
 FBXAnim=../../../../../Repos/HotelSimulator/MyProject/Content/
-GenericImport=C:/Users/rafal/OneDrive/Pulpit/Photos 23/I_TaskBar.png
+GenericImport=C:/Users/rafal/Downloads/I_TempLogo_HotelSim.png
 GenericExport=../../../../../Repos/HotelSimulator/MyProject/Content/
 GenericOpen=../../../../../Repos/HotelSimulator/MyProject/Content/
 GenericSave=../../../../../Repos/HotelSimulator/MyProject/Content/
@@ -2383,7 +2383,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
