--- a/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MyProject/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,7 +173,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1342,7 +1342,7 @@ BRUSH=../../../../../Repos/HotelSimulator/MyProject/Content/
 FBX=../../../../../Repos/HotelSimulator/MyProject/Content/
 FBXAnim=../../../../../Repos/HotelSimulator/MyProject/Content/
 GenericImport=C:/Users/rafal/Downloads/I_TempLogo_HotelSim.png
-GenericExport=../../../../../Repos/HotelSimulator/MyProject/Content/
+GenericExport=D:/Repos/HotelSimulator/PeterSim/Content
 GenericOpen=../../../../../Repos/HotelSimulator/MyProject/Content/
 GenericSave=../../../../../Repos/HotelSimulator/MyProject/Content/
 MeshImportExport=../../../../../Repos/HotelSimulator/MyProject/Content/
