--- a/PeterSimulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeterSimulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,7 +173,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/UserInterface/Menues
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -200,7 +200,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_Paused.WBP_Paused
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1097,6 +1098,7 @@ WBP_MainMenu_C.Accessibility=True
 WBP_MainMenu_C.Clipping=True
 WBP_MainMenu_C.Navigation=True
 GI_MainGameInstance_C.Default=True
+WBP_MainMenu_C.Events=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1104,15 +1106,15 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Objec
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" "
-Widget=
-Visual=
-Object="\"Object.Mappings.Mappings.Mappings[15]\" "
+Widget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Visual="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Object="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 BP_DeskMaster_C=
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[15]\" "
-DataAsset="\"Object.Mappings.Mappings.Mappings[15]\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" "
+DataAsset="\"Object.Mappings.Mappings.Mappings[1]\" "
 BP_FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -1149,26 +1151,26 @@ HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem1=/Game/FirstPerson/Input/IMC_Walking
-MRUItem2=/Game/FirstPerson/Input/IMC_Default
-MRUItem3=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem4=/Game/Blueprints/GameInstance/GI_MainGameInstance
-MRUItem5=/Game/UserInterface/Menues/WBP_MainMenu
-MRUItem6=/Game/Blueprints/BPC_Desk1
-MRUItem7=/Game/Blueprints/Menu/BP_Spawn
-MRUItem8=/Game/UserInterface/PC/WBP_Desktop
-MRUItem9=/Game/UserInterface/WBP_MonitorScreen
-MRUItem10=/Game/UserInterface/WBP_HUD
-MRUItem11=/Game/UserInterface/PC/WBP_Managment
-MRUItem12=/Game/UserInterface/PC/WBP_Constructions
-MRUItem13=/Game/UserInterface/PC/WBP_Shopping
-MRUItem14=/Game/FirstPersonMap
-MRUItem15=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem16=/Game/Main
-MRUItem17=/Game/Blueprints/BP_DeskMaster
-MRUItem18=/Game/OfficeScene/Maps/tests
-MRUItem19=/Game/FirstPerson/Input/Actions/IA_StandUp
+MRUItem0=/Game/UserInterface/Menues/WBP_Paused
+MRUItem1=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem2=/Game/FirstPerson/Input/IMC_Walking
+MRUItem3=/Game/FirstPerson/Input/IMC_Default
+MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem5=/Game/Blueprints/GameInstance/GI_MainGameInstance
+MRUItem6=/Game/UserInterface/Menues/WBP_MainMenu
+MRUItem7=/Game/Blueprints/BPC_Desk1
+MRUItem8=/Game/Blueprints/Menu/BP_Spawn
+MRUItem9=/Game/UserInterface/PC/WBP_Desktop
+MRUItem10=/Game/UserInterface/WBP_MonitorScreen
+MRUItem11=/Game/UserInterface/WBP_HUD
+MRUItem12=/Game/UserInterface/PC/WBP_Managment
+MRUItem13=/Game/UserInterface/PC/WBP_Constructions
+MRUItem14=/Game/UserInterface/PC/WBP_Shopping
+MRUItem15=/Game/FirstPersonMap
+MRUItem16=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem17=/Game/Main
+MRUItem18=/Game/Blueprints/BP_DeskMaster
+MRUItem19=/Game/OfficeScene/Maps/tests
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1273,6 +1275,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 /Game/Blueprints/Menu/BP_Spawn.BP_Spawn=0
 /Game/Blueprints/GameInstance/GI_MainGameInstance.GI_MainGameInstance=0
 /Game/UserInterface/Menues/WBP_MainMenu.WBP_MainMenu=0
+/Game/UserInterface/Menues/WBP_Paused.WBP_Paused=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2379,7 +2382,7 @@ StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,Stat
 BillboardComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause,
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
