--- a/PeterSimulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeterSimulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -200,8 +200,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_Paused.WBP_Paused
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/GameInstance/GI_MainGameInstance.GI_MainGameInstance
+OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1108,7 +1109,7 @@ TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Ob
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" "
 Widget="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
 Visual="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
-Object="\"Object.Appearance.Background\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+Object=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
@@ -1151,12 +1152,12 @@ HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UserInterface/Menues/WBP_Paused
-MRUItem1=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem2=/Game/FirstPerson/Input/IMC_Walking
-MRUItem3=/Game/FirstPerson/Input/IMC_Default
-MRUItem4=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem5=/Game/Blueprints/GameInstance/GI_MainGameInstance
+MRUItem0=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Blueprints/GameInstance/GI_MainGameInstance
+MRUItem2=/Game/UserInterface/Menues/WBP_Paused
+MRUItem3=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem4=/Game/FirstPerson/Input/IMC_Walking
+MRUItem5=/Game/FirstPerson/Input/IMC_Default
 MRUItem6=/Game/UserInterface/Menues/WBP_MainMenu
 MRUItem7=/Game/Blueprints/BPC_Desk1
 MRUItem8=/Game/Blueprints/Menu/BP_Spawn
@@ -2386,9 +2387,9 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
-SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
-EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,
+EdGraph=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 UserDefinedStruct=UserDefinedStruct.Structure.AE03DC9346529D8EC318B981AF4834A3,UserDefinedStruct.Structure.4933E9B84B84FFA52EA3AE9DFAA4993B,UserDefinedStruct.Structure.5EE7EFC04199F44ED9DED0A5EBAFCDF8,UserDefinedStruct.Structure.05B150D747338CCE3D2D1F90F8DD1BDD,
 BPS_InteractableActorStructure=
@@ -2396,7 +2397,7 @@ Blueprint=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolum
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 K2Node=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
-K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.80DA853B4F5C039BE0BE19BC1C491214,
+K2Node_FunctionEntry=K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.80DA853B4F5C039BE0BE19BC1C491214,K2Node_FunctionEntry.Inputs.F838809C4C7619AB13FEF3890DC066D6,
 K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_FunctionResult=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
