Fixed keyboard not working when paused

--- a/PeterSimulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/PeterSimulator/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -125,7 +125,6 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=156)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -174,7 +173,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/UserInterface/Menues
+ContentBrowserTab1.SelectedPaths=/Game/FirstPerson/Input
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -196,12 +195,36 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+SequenceBrowser.ThumbnailSize=2
+SequenceBrowser.CurrentViewType=2
+SequenceBrowser.HiddenColumns=Compression Ratio
+SequenceBrowser.HiddenColumns=Source Frame Rate
+SequenceBrowser.HiddenColumns=Number of Frames
+SequenceBrowser.HiddenColumns=Number of Keys
+SequenceBrowser.HiddenColumns=Compressed Size (KB)
+SequenceBrowser.HiddenColumns=Target Frame Rate
+SequenceBrowser.HiddenColumns=ImportFileFramerate
+SequenceBrowser.HiddenColumns=ImportResampleFramerate
+SequenceBrowser.HiddenColumns=AdditiveAnimType
+SequenceBrowser.HiddenColumns=RetargetSource
+SequenceBrowser.HiddenColumns=RetargetSourceAsset
+SequenceBrowser.HiddenColumns=Interpolation
+SequenceBrowser.HiddenColumns=bEnableRootMotion
+SequenceBrowser.HiddenColumns=bUseNormalizedRootMotionScale
+SequenceBrowser.HiddenColumns=TargetFrameRate
+SequenceBrowser.HiddenColumns=NumberOfSampledKeys
+SequenceBrowser.HiddenColumns=SequenceLength
+SequenceBrowser.HiddenColumns=Skeleton
+SequenceBrowser.HiddenColumns=ParentAsset
+SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
+SequenceBrowser.HiddenColumns=CurveNameList
+SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/GameInstance/GI_MainGameInstance.GI_MainGameInstance
 OpenAssetsAtExit=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_Paused.WBP_Paused
@@ -209,6 +232,8 @@ OpenAssetsAtExit=/Game/UserInterface/Menues/WBP_PauseMenu.WBP_PauseMenu
 OpenAssetsAtExit=/Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause
 OpenAssetsAtExit=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP.FirstPerson_AnimBP
 OpenAssetsAtExit=/Game/Blueprints/Menu/BP_Spawn.BP_Spawn
+OpenAssetsAtExit=/Game/Blueprints/BP_TestSpinCube.BP_TestSpinCube
+OpenAssetsAtExit=/Game/FirstPerson/Input/IMC_Walking.IMC_Walking
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1145,13 +1170,13 @@ TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Ob
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" "
 Widget=
 Visual=
-Object=
+Object="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[13].Triggers\" \"Object.Mappings.Mappings.Mappings[13].Modifiers\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" "
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" "
 BP_DeskMaster_C=
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" "
-DataAsset="\"Object.SkeletalMeshes\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[13].Triggers\" \"Object.Mappings.Mappings.Mappings[13].Modifiers\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" "
+DataAsset="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[13]\" \"Object.Mappings.Mappings.Mappings[13].Triggers\" \"Object.Mappings.Mappings.Mappings[13].Modifiers\" \"Object.Mappings.Mappings.Mappings[14]\" \"Object.Mappings.Mappings.Mappings[15]\" "
 BP_FirstPersonCharacter_C=
 Character=
 Pawn=
@@ -1189,26 +1214,26 @@ Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_TestSpinCube
-MRUItem1=/Game/Blueprints/Menu/BP_Spawn
-MRUItem2=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
-MRUItem3=/Game/FirstPerson/Input/Actions/IA_Pause
-MRUItem4=/Game/UserInterface/Menues/WBP_PauseMenu
-MRUItem5=/Game/UserInterface/Menues/WBP_Paused
-MRUItem6=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
-MRUItem7=/Game/Blueprints/GameInstance/GI_MainGameInstance
-MRUItem8=/Game/FirstPerson/Input/IMC_SittingDown
-MRUItem9=/Game/FirstPerson/Input/IMC_Walking
-MRUItem10=/Game/FirstPerson/Input/IMC_Default
-MRUItem11=/Game/UserInterface/Menues/WBP_MainMenu
-MRUItem12=/Game/Blueprints/BPC_Desk1
-MRUItem13=/Game/UserInterface/PC/WBP_Desktop
-MRUItem14=/Game/UserInterface/WBP_MonitorScreen
-MRUItem15=/Game/UserInterface/WBP_HUD
-MRUItem16=/Game/UserInterface/PC/WBP_Managment
-MRUItem17=/Game/UserInterface/PC/WBP_Constructions
-MRUItem18=/Game/UserInterface/PC/WBP_Shopping
-MRUItem19=/Game/FirstPersonMap
+MRUItem0=/Game/FirstPerson/Input/IMC_Walking
+MRUItem1=/Game/FirstPerson/Input/Actions/IA_Interact
+MRUItem2=/Game/Blueprints/BP_TestSpinCube
+MRUItem3=/Game/Blueprints/Menu/BP_Spawn
+MRUItem4=/Game/FirstPersonArms/Animations/FirstPerson_AnimBP
+MRUItem5=/Game/FirstPerson/Input/Actions/IA_Pause
+MRUItem6=/Game/UserInterface/Menues/WBP_PauseMenu
+MRUItem7=/Game/UserInterface/Menues/WBP_Paused
+MRUItem8=/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter
+MRUItem9=/Game/Blueprints/GameInstance/GI_MainGameInstance
+MRUItem10=/Game/FirstPerson/Input/IMC_SittingDown
+MRUItem11=/Game/FirstPerson/Input/IMC_Default
+MRUItem12=/Game/UserInterface/Menues/WBP_MainMenu
+MRUItem13=/Game/Blueprints/BPC_Desk1
+MRUItem14=/Game/UserInterface/PC/WBP_Desktop
+MRUItem15=/Game/UserInterface/WBP_MonitorScreen
+MRUItem16=/Game/UserInterface/WBP_HUD
+MRUItem17=/Game/UserInterface/PC/WBP_Managment
+MRUItem18=/Game/UserInterface/PC/WBP_Constructions
+MRUItem19=/Game/UserInterface/PC/WBP_Shopping
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -1293,7 +1318,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()),("/Game/FirstPersonMap.FirstPersonMap", ()))
 
 [AssetEditorToolkitTabLocation]
-/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=0
+/Game/FirstPerson/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter=1
 /Game/UserInterface/WBP_HUD.WBP_HUD=0
 /Game/Materials/M_HighlightMat.M_HighlightMat=0
 /Game/Blueprints/BPC_Desk1.BPC_Desk1=0
@@ -1314,6 +1339,10 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 /Game/Blueprints/GameInstance/GI_MainGameInstance.GI_MainGameInstance=0
 /Game/UserInterface/Menues/WBP_MainMenu.WBP_MainMenu=0
 /Game/UserInterface/Menues/WBP_Paused.WBP_Paused=0
+/Game/UserInterface/Menues/WBP_PauseMenu.WBP_PauseMenu=0
+/Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause=0
+/Game/FirstPersonArms/Animations/FirstPerson_AnimBP.FirstPerson_AnimBP=0
+/Game/Blueprints/BP_TestSpinCube.BP_TestSpinCube=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2402,6 +2431,10 @@ HierarchicalLODUtilities.TimeStamp=2023.01.16-15.27.22
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2023.01.16-15.27.22
 ExternalImagePicker.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2023.01.16-15.27.27
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2023.01.16-15.27.25
+PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2415,12 +2448,12 @@ bUseUnsortedMenus=False
 PostProcessVolume=PostProcessVolume.Rendering Features.Rendering Features
 BrushComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 BPC_Desk1_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,
-SceneComponent=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
+SceneComponent=
 StaticMeshComponent=PostProcessVolume.Rendering Features.Rendering Features,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BillboardComponent=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BP_DeskMaster_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Interact.IA_Interact,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_StandUp.IA_StandUp,InputMappingContext.Mappings.ActionMappings./Game/FirstPerson/Input/Actions/IA_Pause.IA_Pause,
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.beginPlayTags,K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BP_FirstPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.beginPlayTags,PostProcessVolume.Rendering Features.Rendering Features,PropertyWrapper.DefaultValueCategory.beginPlayTags,PropertyWrapper.DefaultValueCategory.InteractableActorInfo,PropertyWrapper.DefaultValueCategory.listOfInteractables,PropertyWrapper.DefaultValueCategory.interactableTags,K2Node_VariableSet.DefaultValueCategory.Tags,K2Node_FunctionEntry.Inputs.BDFE3D7C4FD503D9407A2699C6FB8AAB,K2Node_FunctionEntry.Inputs.5EF5BCE4449B1AC5E223E7AFD19420EE,MulticastInlineDelegatePropertyWrapper.DelegateInputs.374E5C5441EBA9B23CD87B82EFF4A713,
 BoxComponent=PostProcessVolume.Rendering Features.Rendering Features,
@@ -2785,4 +2818,11 @@ bTimelineDisplayFormatSecondary=True
 bTimelineDisplayCurveKeys=False
 TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
+
+[/Script/PinnedCommandList.PinnedCommandListSettings]
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
